--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,17 @@
-.header {
-  font-family: PT, sans-serif;
-  color: #3f1622;
+html {
+  background-color: #c9b5ab;
+  line-height: 1.5;
+  font-size: .8rem;
+}
+
+h1, h2 {
+  color: #3f1622
+  font-weight: bold;
+}
+
+a {
+  color: #8f2440
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
