--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,22 @@ a {
   font-weight: bold;
   font-size: 1.5rem;
 }
+
+.beet {
+  font-family: "pt sans", sans-sans-serif;
+}
+
+figure {
+  font-family: "pt serif", sans-serif;
+  font-size: 1.125rem;
+  font-style: italic;
+}
+
+main {
+  font-family: "pt serif", sans-serif;
+  line-height: 1.5;
+}
+
+.days {
+  font-size: 1.5rem;
+}
