--- a/css/main.css
+++ b/css/main.css
@@ -68,3 +68,36 @@ li a {
   font-style: normal;
   font-size: 1.125rem;
 }
+
+h2 + p {
+  font-style: italic;
+}
+
+p strong {
+  font-weight: normal;
+}
+
+img {
+  width: 100%;
+}
+
+article {
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+
+aside {
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+
+.weird {
+  font-style: italic;
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 2.5rem;
+}
+
+footer a {
+  font-size: .8rem;
+}
